<?xml version="1.0" encoding="UTF-8"?>
<!--
 Loco xml export: Android string resources
 Project: Lattis Operator
 Release: Working copy
 Locale: en, English
 Exported by: Jignesh Tank
 Exported at: Wed, 21 Jul 2021 17:06:57 +0530
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="operator">OPERATOR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fleets">Fleets</string>
    <string name="log_out">Log Out</string>
    <string name="vehicles">Vehicles</string>
    <string name="tickets">Tickets</string>
    <string name="map">Map</string>
    <string name="equipment">Equipment</string>
    <string name="create_ticket">Create ticket</string>
    <string name="ticket">Ticket</string>
    <string name="vehicle">Vehicle</string>
    <string name="created">Created</string>
    <string name="category">Category</string>
    <string name="assign_to">Assign to:</string>
    <string name="operator_notes">Operator notes</string>
    <string name="add_notes">Add notes</string>
    <string name="notes">Notes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="name">Name</string>
    <string name="battery_level">Battery level</string>
    <string name="qr_code">QR-code</string>
    <string name="locate">Locate</string>
    <string name="trips">Trips</string>
    <string name="status">Status</string>
    <string name="group">Group</string>
    <string name="ride_type">Ride type</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="vendor">Vendor</string>
    <string name="key">Key</string>
    <string name="device_type">Device type</string>
    <string name="connection">Connection</string>
    <string name="scan_qr_code">Scan QR-code</string>
    <string name="login">Login</string>
    <string name="warning">Warning</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="clean">Clean</string>
    <string name="select_fleet">Select Fleet</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="status_live">Live</string>
    <string name="status_out_of_service">Out of service</string>
    <string name="status_staging">Staging</string>
    <string name="status_any">Any</string>
    <string name="unassigned">Unassigned</string>
    <string name="assignee">Assignee</string>
    <string name="change_status">Change status</string>
    <string name="parking_outside_geofence">Parking outside geofence</string>
    <string name="issue_detected">Issue detected</string>
    <string name="damage_reported">Damage reported</string>
    <string name="service_due">Service due</string>
    <string name="reported_theft">Reported theft</string>
    <string name="select_vehicle">Select vehicle</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="status_archive">Archive</string>
    <string name="defleet">Defleet</string>
    <string name="equipment_assigned">Equipment assigned</string>
    <string name="lock_not_assigned">Equipment unassigned</string>
    <string name="parked">Parked</string>
    <string name="on_trip">In Ride</string>
    <string name="damaged">Damage reported</string>
    <string name="reported_stolen">Reported stolen</string>
    <string name="stolen">Stolen</string>
    <string name="under_maintenance">Maintenance</string>
    <string name="total_loss">Total loss</string>
    <string name="collect">Collect</string>
    <string name="balancing">Balancing</string>
    <string name="reserved">Reserved</string>
    <string name="transport">Transport</string>
    <string name="status_secondary">Secondary</string>
    <string name="status_primary">Primary</string>
    <string name="security_label">Security</string>
    <string name="control_label">Control</string>
    <string name="headlight">Headlight</string>
    <string name="taillight">Taillight</string>
    <string name="unlock_battery_cover">Unlock battery cover</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="flicker">Flicker</string>
    <string name="horn">Horn</string>
    <string name="sound">Sound</string>
    <string name="refresh">Refresh</string>
    <string name="internet_is_required">The service requires internet connection.</string>
    <string name="user">User</string>
    <string name="phone_number">Phone number</string>
    <string name="date_started">Date started</string>
    <string name="date_ended">Date ended</string>
    <string name="duration">Duration</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="end_trip">End trip</string>
    <string name="call">Call</string>
    <string name="copy">Copy</string>
    <string name="message">Message</string>
    <string name="no_tickets">No tickets</string>
    <string name="no_vehicles">No vehicles</string>
    <string name="done">Done</string>
    <string name="low_battery">Low battery</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="send_email">Send email</string>
    <string name="location_access_hint">Please allow the application to access location. This is required while using the app</string>
    <string name="general_btn_ok">OK</string>
    <string name="scan">Scan</string>
    <string name="_0025_0040_qr_codes">%s QR-codes</string>
    <string name="close">Close</string>
    <string name="batch_actions_on_trip">Please handle on trip vehicle before using batch actions</string>
    <string name="clear">Clear</string>
    <string name="resolve">Resolve</string>
    <string name="other_equipment_label">Other Equipment</string>
</resources>
