<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_vehicle_detail_box"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="15dp">


    <io.lattis.operator.presentation.customview.CustomTextView
        android:id="@+id/ct_vehicle_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        custom:typefaceAsset="GothamSSm-Medium.otf" />
    <io.lattis.operator.presentation.customview.CustomTextView
        android:id="@+id/ct_vehicle_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/vehicle_box_text"
        app:layout_constraintBottom_toBottomOf="@+id/ct_vehicle_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ct_vehicle_name_label"
        custom:typefaceAsset="GothamSSm-Bold.otf" />
    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/vehicle_box_divider"
        custom:layout_constraintTop_toBottomOf="@+id/ct_vehicle_name_value" />



    <io.lattis.operator.presentation.customview.CustomTextView
        android:id="@+id/ct_vehicle_battery_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/battery_level"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_1"
        custom:typefaceAsset="GothamSSm-Medium.otf" />
    <io.lattis.operator.presentation.customview.CustomTextView
        android:id="@+id/ct_vehicle_battery_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/vehicle_box_text"
        app:layout_constraintBottom_toBottomOf="@+id/ct_vehicle_battery_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ct_vehicle_battery_label"
        custom:typefaceAsset="GothamSSm-Bold.otf" />
    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/vehicle_box_divider"
        custom:layout_constraintTop_toBottomOf="@+id/ct_vehicle_battery_value" />



    <io.lattis.operator.presentation.customview.CustomTextView
        android:id="@+id/ct_vehicle_qrcode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/qr_code"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_2"
        custom:typefaceAsset="GothamSSm-Medium.otf" />
    <io.lattis.operator.presentation.customview.CustomTextView
        android:id="@+id/ct_vehicle_qrcode_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/vehicle_box_text"
        app:layout_constraintBottom_toBottomOf="@+id/ct_vehicle_qrcode_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ct_vehicle_qrcode_label"
        custom:typefaceAsset="GothamSSm-Bold.otf" />
    <View
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/vehicle_box_divider"
        custom:layout_constraintTop_toBottomOf="@+id/ct_vehicle_qrcode_value" />



    <io.lattis.operator.presentation.customview.CustomTextView
        android:id="@+id/ct_vehicle_locate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/locate"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_3"
        custom:typefaceAsset="GothamSSm-Medium.otf" />
    <ImageView
        android:id="@+id/iv_locate_next_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:src="@drawable/next_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/ct_vehicle_locate_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ct_vehicle_locate_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>